# ros2-ride-share-sim

./: CMakeLists.txt  README.md  package.xml
launch/: ride_share.launch.py
ros2_ride_share_sim/: driver_node.py  rider_node.py  scheduler_node.py
