<?xml version="1.0"?>
<package format="3">
  <name>ros2_ride_share_sim</name>
  <version>0.0.1</version>
  <description>Multi-agent ride sharing simulation using ROS2</description>
  <maintainer email="you@example.com">Atharsh S</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
